; ModuleID = '/home/carl/AnghaBench/tengine/src/http/modules/perl/extr_ngx_http_perl_module.c_ngx_http_perl_init_main_conf.c'
source_filename = "/home/carl/AnghaBench/tengine/src/http/modules/perl/extr_ngx_http_perl_module.c_ngx_http_perl_init_main_conf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@NGX_CONF_OK = common dso_local global i64 0, align 8
@NGX_CONF_ERROR = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*)* @ngx_http_perl_init_main_conf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ngx_http_perl_init_main_conf(i32* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = bitcast i8* %7 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %8, %struct.TYPE_3__** %6, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %22

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %16 = call i64 @ngx_http_perl_init_interpreter(i32* %14, %struct.TYPE_3__* %15)
  %17 = load i64, i64* @NGX_CONF_OK, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %13
  %20 = load i8*, i8** @NGX_CONF_ERROR, align 8
  store i8* %20, i8** %3, align 8
  br label %25

21:                                               ; preds = %13
  br label %22

22:                                               ; preds = %21, %2
  %23 = load i64, i64* @NGX_CONF_OK, align 8
  %24 = inttoptr i64 %23 to i8*
  store i8* %24, i8** %3, align 8
  br label %25

25:                                               ; preds = %22, %19
  %26 = load i8*, i8** %3, align 8
  ret i8* %26
}

declare dso_local i64 @ngx_http_perl_init_interpreter(i32*, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
